styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --foreground-rgb: 0, 0, 0;
  --background-start-rgb: 214, 219, 220;
  --background-end-rgb: 255, 255, 255;
}

@media (prefers-color-scheme: dark) {
  :root {
    --foreground-rgb: 255, 255, 255;
    --background-start-rgb: 0, 0, 0;
    --background-end-rgb: 0, 0, 0;
    /* --bg-color: #000000; */
    /* --text-color: #ffffff; */
  }
}

/* html,
body,
#__next {
  width: 100%;
} */

/* SCROLLBAR --------------- */
html {
  scrollbar-width: none;
}

body::-webkit-scrollbar {
  width: 0;
}
/* SCROLLBAR --------------- */

body {
  background-color: var(--bg-color);
  color: var(--text-color);
}

/* #__next {
  position: relative;
} */

/* html {
  min-height: 100%;
  overflow-x: hidden;
} */

/* body { */
/* color: rgb(var(--foreground-rgb)); */
/* background: linear-gradient(
      to bottom,
      transparent,
      rgb(var(--background-end-rgb))
    )
    rgb(var(--background-start-rgb)); */
/* } */

